--- a/styles.css
+++ b/styles.css
@@ -754,3 +754,17 @@ footer .footer-content a:hover {
     /* softer gold hover */
 }
 
+.cart-badge {
+  position: absolute;
+  top: -10px;
+  right: -5px;
+  background: rgba(0, 0, 0, 0.829);
+  color: white;
+  font-size: 15px;
+  /* font-weight: bold; */
+  border-radius: 50%;
+  /* padding: 2px 6px; */
+  min-width: 18px;
+  text-align: center;
+  font-family: monospace;
+}
